css/static.css
/* Cash app static monolyth components
-------------------------------------- */

.c-import-progress { padding-left: 20px; color: #aaa; }
.c-import-progress li.completed { color: #000; }
.c-import-progress li.current { font-weight: bold; color: #000; }
.c-import-preview .c-parsed-rows { position: relative; max-width: 80%; max-height: 300px; overflow: hidden; }
.c-import-preview .c-parsed-rows-content { overflow: scroll; max-height: 300px; }
.c-import-preview .c-parsed-rows-shader { position: absolute; bottom: 0; left: 0; right: 0; height: 30%; background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); }
table.c-import-conditions { margin: 1rem 0; }
table.c-import-conditions td { border: none; }
table.c-import-conditions td .c-condition { background: #eee; padding: 2px 3px 1px; color: #888; }

.c-settings-columns { display: flex; margin-top: -10px; }
.c-settings-columns .c-column { flex: 0 1 200px; padding-right: 50px; padding-left: 16px; }
.c-settings-columns .c-ousted-sort-icon { position: relative; left: -20px; }

.c-shop-settings-wrapper-disabled { opacity: 0.5; }

.c-notice { background: #e0ffdd; border: 1px solid rgba(0,0,0,0.1); box-shadow: 0 5px 10px -5px rgba(0,0,0,0.1); border-radius: 4px; padding: 30px 40px; margin: 10px 0; line-height: 1.3em; }

.c-report-dds-outer { position: relative; margin-bottom: 6rem; min-width: 640px; }
.c-report-dds-inner {
    overflow-x: scroll;
    overflow-y: hidden;
    padding-bottom: 1rem;
}
.c-report-dds-inner table { table-layout: fixed; border-collapse: inherit; }
.c-report-dds-inner table th { width: 100px; }
@media screen and (min-width: 2000px) {
    .c-report-dds-inner table th { width: calc(100%/14); }
}
.c-report-dds-inner table tbody tr.bordered-bottom td { border-bottom: 2px solid var(--light-gray); }
.c-report-dds-inner table tbody tr:first-child td:not(.c-report-pie-column) { border-bottom: 2px solid var(--gray); }
.c-report-dds-inner table td { width: 100px; background: var(--background-color-table-row-hover); vertical-align: top; }
.c-report-dds-inner table tr.c-row-white th,
.c-report-dds-inner table tr.c-row-white td { background: var(--background-color-blank); font-size: 0.75rem; }
.c-report-dds-inner table .c-column-sticky-left {
    position: sticky; left: 0; width: 130px;
    background: var(--background-color-blank);
    background: linear-gradient(90deg, var(--background-color-blank) 0%, var(--background-color-blank) 80%, rgba(255,255,255,0) 100%);
    color: var(--text-color-stronger);
    z-index: 99;
}
.c-report-dds-inner table .c-column-sticky-left .icon { margin-right: 0.25rem; }
.c-report-dds-inner table .c-column-sticky-right-totals {
    position: sticky;
    right: 0;
    width: 150px;
    background: var(--background-color-blank);
    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, var(--background-color-blank) 20%, var(--background-color-blank) 100%);
}
.c-report-dds-inner table .c-column-sticky-right-pies { position: absolute; right: 0; width: 180px; overflow-x: hidden; overflow-y: auto; height: calc(100% - 2rem); padding: 0; text-align: center; background: var(--background-color-blank); border: none; }

[data-cash-import-csv-check-fullness] { display: none }

@media screen and (max-width: 760px) { /* mobile */

    .c-report-dds-outer { min-width: 0; width: 100%; }
    .c-report-dds-inner { margin: 0; width: 100%; }
    .c-report-dds-inner table .c-column-sticky-left { position: static; }
    .c-report-dds-inner table .c-column-sticky-right-totals { position: static; }
    .c-report-dds-inner table .c-column-sticky-right-pies { position: static; }
}

